--- a/Condicional/ex5/index.html
+++ b/Condicional/ex5/index.html
@@ -8,7 +8,7 @@
     <title>Exercício 05</title>
 </head>
 <body>
-    <h3>Faça um script que leia três números inteiros, em seguida mostre o maior e o menor deles</h3>
+    <h3>Faça um script que leia três números e mostre-os em ordem decrescente.</h3>
     <br />
 
     <script src="script.js"></script>
