--- a/Laços e Loops/ex01/index.html
+++ b/Laços e Loops/ex01/index.html
@@ -8,7 +8,7 @@
     <title>Exercício 01</title>
 </head>
 <body>
-    <h3></h3>
+    <h3>Faça um programa que peça uma nota, entre zero e dez. Mostre uma mensagem caso o valor seja inválido e continue pedindo até que o usuário informe um valor válido. </h3>
     <br />
 
     <script src="script.js"></script>
