--- a/Laços e Loops/ex07/index.html
+++ b/Laços e Loops/ex07/index.html
@@ -8,7 +8,7 @@
     <title>Exercício 07</title>
 </head>
 <body>
-    <h3>Faça um programa que leia 5 npumeros e informe o mairo deles.</h3>
+    <h3>Faça um programa que leia 5 números e informe o maior deles.</h3>
     <br />
 
     <script src="script.js"></script>
