--- a/Laços e Loops/ex08/index.html
+++ b/Laços e Loops/ex08/index.html
@@ -8,7 +8,7 @@
     <title>Exercício 08</title>
 </head>
 <body>
-    <h3>Faça um programa que leia 5 números e informe o mairo deles.</h3>
+    <h3>Faça um programa que leia 5 números e informe a soma e a média dos números informados.</h3>
     <br />
 
     <script src="script.js"></script>
