--- a/Laços e Loops/ex16/index.html
+++ b/Laços e Loops/ex16/index.html
@@ -8,7 +8,7 @@
     <title>Exercício 16</title>
 </head>
 <body>
-    <h3>15.	A série de Fibonacci é formada pela sequência 1,1,2,3,5,8,13,21,34,55,... Faça um programa capaz de gerar a série até o n−ésimo termo.</h3>
+    <h3>A série de Fibonacci é formada pela sequência 1,1,2,3,5,8,13,21,34,55,... Faça um programa que gere a série até que o valor seja maior que 500.</h3>
     <br />
 
     <script src="script.js"></script>
